--- a/app/elements/signup-element/signup-element.html
+++ b/app/elements/signup-element/signup-element.html
@@ -12,11 +12,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <dom-module id="signup-element">
   <style>
-    paper-material {
-      width: 70%;
-      margin: 0 auto;
-      padding: 0 0 20px;
-    }
+
 
     paper-input-container {
       padding: 0 20px 0 20px !important;
@@ -35,7 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
   </style>
   <template>
-    <paper-material>
+    <!-- <paper-material> -->
 
       <paper-header-panel class="">
         <paper-toolbar>
@@ -70,7 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div id="button-create">
         <paper-button class="submitButton" autovalidate center-center raised on-click="handleClick" disabled="{{disabledButton}}" >Erstellen</paper-button>
       </div>
-    </paper-material>
+    <!-- </paper-material> -->
   </template>
   <script>
     (function() {
