--- a/app/dozent.html
+++ b/app/dozent.html
@@ -77,7 +77,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <!-- Drawer Content -->
         <paper-menu class="list" attr-for-selected="data-route" selected="{{route}}" on-iron-select="onMenuSelect">
           <a data-route="d-home" href="/">
-            <iron-icon icon="d-home"></iron-icon>
+            <iron-icon icon="icons:home"></iron-icon>
             <span>Home</span>
           </a>
 
