--- a/app/elements/appointment-list-docent/appointment-list-docent.html
+++ b/app/elements/appointment-list-docent/appointment-list-docent.html
@@ -37,9 +37,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       fill: rgb(157, 157, 157);
       cursor: pointer;
     }
+    #print {
+      fill: rgb(255, 255, 255);
+      width: 30px;
+      height: 30px;
+    }
   </style>
   <template>
-test
+    <paper-header-panel>
+      <paper-toolbar justify>
+        <div>
+          <h2>Your Appointments</h2>
+
+        </div>
+        <span class="flex"></span>
+
+          <paper-button flat  on-click="print">
+
+            Print
+            <iron-icon id="print" icon="icons:print"></iron-icon>
+          </paper-button>
+
+      </paper-toolbar>
+    </paper-header-panel>
     <template is="dom-repeat" items="{{appointList}}">
       <paper-card>
         <div class="card-content">
@@ -48,16 +68,20 @@ test
             <paper-item-body two-line class="paper-item-body-0">
               <paper-ripple fit></paper-ripple>
               <div>
-                <span>{{item.userName}}</span>
+              <h2>{{item.date}}</h2>
+                <b>Name:</b> <span>{{item.userName}}</span>
+              <br/>
+                  <b>Time</b>
+                    <span>{{item.startTime}}</span> -
+                    <span>{{item.endTime}}</span>
+
               </div>
               <div secondary>
-                Date:
-                <span>{{item.date}}</span>
+                <br/>
+                <b>Email:</b> <span>{{item.userEmail}}</span>
               </div>
               <div secondary>
-                From:
-                <span>{{item.startTime}}</span> Until:
-                <span>{{item.endTime}}</span>
+
               </div>
 
             </paper-item-body>
@@ -73,6 +97,19 @@ test
       is: 'appointment-list-docent',
 
       properties: {
+
+      },print: function() {
+
+        document.getElementById('paperDrawerPanel').forceNarrow = true;
+
+        $(this).ready(function() {
+          setTimeout(function() {
+              window.print();
+            document.getElementById('paperDrawerPanel').forceNarrow = false;
+          }, 300);
+
+        });
+
 
       },
       ready: function(){
